# workshop-spark-measures

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MEMORY.md  Makefile  README.md  pyproject.toml
dev-todos/backlog/: to-do_generator_volume_metrics.md  to-do_lab2_empty_partitions_diagnosis.md  to-do_lab2_stage_metrics_interpretation_drill.md  to-do_lab2_task_duration_skew_diagnosis.md  to-do_lab2b_stage_metrics_interpretation_drill.md  to-do_lab2c_task_duration_skew_diagnosis.md  to-do_lab2d_empty_partitions_diagnosis.md  to-do_lab4_stage_workload_fingerprint.md  to-do_lab7b_daily_backfill_stage_metrics.md  to-do_refinar_lab0_enquadramento_e_bootstrap.md  to-do_refinar_lab1_diagnostico_stage_e_task.md  to-do_refinar_lab2_mini_experimentos.md  (+7 more)
docs/: README.md  bootstrap-guide.md  data-generator-architecture.md  experiment-pattern.md  requirements.md
generator/: README.md
presentation/: README.md
research/: data-generator-research.md
tests/: test_artifact_stats.py  test_artifacts.py  test_config.py  test_experiment_runner.py  test_generator_cli.py  test_generator_contract.py  test_lab0_transformations.py  test_lab1_config.py  test_lab1_random_task_outlier.py  test_lab1_transformations.py  test_lab2_config.py  test_lab2_transformations.py  test_lab3_config.py  test_lab3_transformations.py  test_lab4_fingerprint.py  test_lab5_budget.py  test_lab6_contract.py  test_lab7_temporal_generator.py  test_metrics.py  test_metrics_factory.py  test_session_singleton.py  test_spark_job_descriptions.py  test_spark_worker_topology.py  test_workshop_jobs.py
(+223 files in other folders)
